------------------- Upcoming version 5.0 -----------------------------

Major features:


Features and improvements:

- Score-P now generates a dynamic MANIFEST file for each experiment
  and copies files, like the filter or selective configuration files,
  to the experiment directory.

Bugfixes:


------------------- Released version 4.0 -----------------------------

Major features:

- User Library Wrapping: Using scorep-libwrap-init, you can now
  automatically generate library wrappers supplying only the
  headers and library files of the target library.
  You then install the wrapper into SCOREP_LIBWRAP_PATH and use it
  with the new instrumenter flag --libwrap=<wrapper>.
  For this only linking with Score-P is necessary, except when
  the library is called from threads, then the threading paradigm
  has to be instrumented as well.

Features and improvements:

- The utility "scorep-score" is provided now as a library application
  to allow using its functionality in third-party software. Obtain
  compile flags via
  "scorep-config --target score --cflags|--ldflags|--libs".
- Improve detection and compiler selection for SGI MPT
  implementations.
- Provide the Substrate Plugin interface, which enables plugins to
  consume Score-P runtime events for recording, analysis, and
  optimization purposes.
- Added the option SCOREP_FORCE_CFG_FILES, which enables users to
  force the creation of the experiment directory even if there are no
  active substrates that write any output. Defaults to true.
- Provided the option to use sequence definitions for the system tree.
  They provide a constant size system tree description. The trade-off
  is the loss of individual names and properties for locations,
  location groups and system tree nodes. Currently supported only for
  MPI.
- Added possibilities to aggregate the locations within a thread to
  reduce the report size. The aggregation can be enabled via the
  SCORE_PROFILING_FORMAT environment variable. The new formats