@@ -99,6 +99,7 @@ libscorep_profile_la_SOURCES =                                              \
 libscorep_profile_la_CPPFLAGS = \
     $(PROFILE_FLAGS) \
     -DDOCDIR='"$(docdir)"' \
+    -DPKGDATADIR='"$(pkgdatadir)"' \
     -I$(INC_DIR_THREAD) \
     -I$(INC_DIR_MUTEX) \
     @SCOREP_TIMER_CPPFLAGS@
